# auto_hpc

./: .gitignore  README.md  auto_hpc.code-workspace  compare_elementwise_add.py  compare_linear.py  compile_commands.json
CuTeDSL/: README.md
attention/: README.md  __init__.py  custom_attention.py  test_custom_attention.py
docs/: cutlass_arch.md
docs/linear/: cutedsl_optimizer.md
element-wise/: README.md  compare.py
element-wise/cublas/: CMakeLists.txt  README.md  elementwise_add_bench.cu
element-wise/cudnn/: CMakeLists.txt  README.md  elementwise_add_bench.cu
element-wise/cutedsl/: README.md  benchmark_layouts.py  hello_cutedsl_elementwise_add.py
linear/: README.md  compare.py
linear/cpasync_microbench/: CMakeLists.txt  README.md  cpasync_verify.cu
linear/cublas/: CMakeLists.txt  README.md  linear_bench.cu
linear/cuda_cpasync_linear/: README.md  benchmark_cpasync_linear.py  cpasync_tiled_linear.cu
linear/cudnn/: CMakeLists.txt  README.md  linear_bench.cu
linear/cutedsl/: README.md  benchmark_linear.py  hello_cutedsl_linear.py
llm/: README.md  __init__.py  export_onnx.py  model.py  onnx_export.py  tensorrt_engine.py  tokenizer.py  train_tiny.py  triton_test.py  trt_build_run.py
optimize_llm/: README.md  __init__.py
optimize_llm/backend/: __init__.py
optimize_llm/backend/cuteDSL/: __init__.py  fmha_cutedsl.py  fmha_tensorrt_plugin.py
optimize_llm/backend/triton/: __init__.py  fmha_tensorrt_plugin.py  fmha_triton.py
optimize_llm/benchmark/: __init__.py  __main__.py  config.py  driver.py  loader.py  registry.py  spec.py
optimize_llm/benchmark/backends/: __init__.py  base.py  cutedsl_fmha.py  pytorch_fmha.py  triton_fmha.py
optimize_llm/benchmark/examples/: external_backend_template.py  external_plugin.yaml  fmha.yaml
optimize_llm/benchmark/plugins/: __init__.py  base.py
optimize_llm/benchmark/workloads/: __init__.py  fmha.py
skills/auto-loop-hpc/: SKILL.md
skills/auto-loop-hpc/references/: README.md
skills/auto-loop-hpc/references/elementwise_add/: definition.json  workload.jsonl
skills/auto-loop-hpc/references/elementwise_add/pytorch/: kernel.py  solution.json
skills/auto-loop-hpc/references/elementwise_add/triton/: kernel.py  solution.json
skills/optimize_llm/: SKILL.md
tests/: README.md
tests/llm/: test_onnx_export.py  test_trt_build_run.py
